--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
+    "jspdf": "^3.0.1",
     "postcss": "^8.5.3",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.6.0",
+    "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
