--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
+    "react-hot-toast": "^2.5.2",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.6.0",
     "react-select": "^5.10.1",
