--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "jspdf": "^3.0.1",
+    "lucide-react": "^0.511.0",
     "postcss": "^8.5.3",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
